rye/tests/ui/compile-fail/sync-test-main.stderr
error: non-async function is not accepted
 --> $DIR/sync-test-main.rs:4:1
  |
4 | fn test_main() {}
  | ^^^^^^^^^^^^^^^^^
